tests/specs/run/unstable/http.out
error: Uncaught (in promise) TypeError: Deno.createHttpClient is not a function
Deno.createHttpClient();
     ^
    at file:///Users/ib/dev/deno/tests/specs/run/unstable/http.ts:1:6

    info: Deno.createHttpClient() is an unstable API.
    hint: Run again with `--unstable-http` flag to enable this API.
